
    - Added "beforePlayCommands" and "afterPlayCommands" to the MidiPlayer. This allows running external commands before
      playing a song and after playing a song, respectively. For the former, the commands are run before waiting the
      number of ticks configured in beforePlayWaitTicks, for the latter, the commands are run after waiting the number
      of ticks in afterPlayWaitTicks.
  
    - Fixed bug in the velocity generation of the RandomPatternEngine if the minimum and maximum pitch is the same.


0.2: 2011-07-31

    - Completely rewrote the constraint fulfillment code in the SimpleArrangementEngine. Now a randomized backtracking
      algorithm is used to find a song activity matrix which fulfills all constraints. The time required to find a valid
      matrix is now a fraction of what it was before, even if more restrictive constraints are used. You might need to
      increase the maxInterations parameter up to a million or more if you used that parameter before (it now defaults to
      1000000).

    - Added "seed" attribute which allows random seeding of a component by providing a constant 64-bit value (decimal
      integer with sign). Added "salt" attribute which allows to set the random salt by providing a 32-bit value (decimal
      integer with sign). Both attributes can be used for all tags where a "class" attribute is used for instantiating a class,
      but not both can be used at the same time. The provided seed value will be used instead of deriving a seed from the
      parent component or as a random seed salt for the seed derivation scheme, respectively. See the "Random seeds" section
      of the documentation for details (http://www.soundhelix.com/doc/random-seeds).

    - Added "obeyChordSections" tag to the ArpeggioSequenceEngine. If set to true, a chord that spans a chord section boundary
      will lead to a pattern being chosen that ends at the boundary rather than when the chord ends. Defaults to false.
